--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,7 +7,7 @@
 
 </head>
 
-<body>
+<body id="body">
     <title>{% block title %}{% endblock %}</title>
 
     <div id="header">
@@ -15,15 +15,14 @@
         <table id = "navtable">
         	<tr style="width: 100%">
         		<td><a href="/"> Summary </a></td>
-        		<td><a href="/cluster1"> Business Analytics </a></td>
-        		<td><a href="/cluster2"> Health Research </a></td>
-        		<td><a href="/cluster3"> Statistical Analyses </a></td>
-        		<td><a href="/cluster4"> Machine Learning </a></td>
-        		<td><a href="/cluster5"> Insurance Modeling </a></td>
-        		<td><a href="/cluster6"> Engineering Technology </a></td>
-        		<td><a href="/cluster7"> Equal Opportunity </a></td>
-        		<td><a href="/cluster8"> Scientific Research </a></td>
-        		<td><a href="/cluster9"> Consulting Services </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster1"> Medical Clinical </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster2"> Business Development </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster3"> Machine Learning </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster4"> Public Health </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster5"> Insurance Modeling </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster7"> Marketing Media </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster8"> Consulting Services </a></td>
+        		<td><a href="http://jobsearchcompanion.herokuapp.com/cluster9"> Statistical Research </a></td>
         	</tr>
         </table>
     </div>
